test/corpus/declarations/functions.txt
=========
Functions
=========

function foo(){}
function foo(a){}
function foo(a,b){}
function foo(a, ...rest){}
function foo(...rest){}
function foo(a = 1){}
function foo (){
  let a;
}
function foo(a: number){}
function foo({ a }) {}
function foo(): number {}
function foo<Type>(){}
async function foo(){}

---

(source_file
  (function (kw_function) (function_name (identifier)) (function_params) (function_body (block_statement)))
  (function (kw_function) (function_name (identifier)) (function_params (function_param (identifier))) (function_body (block_statement)))
  (function (kw_function) (function_name (identifier)) (function_params (function_param (identifier)) (function_param (identifier))) (function_body (block_statement)))
  (function (kw_function) (function_name (identifier)) (function_params (function_param (identifier)) (function_param (identifier))) (function_body (block_statement)))
  (function (kw_function) (function_name (identifier)) (function_params (function_param (identifier))) (function_body (block_statement)))
  (function (kw_function) (function_name (identifier)) (function_params (function_param (identifier) (expression (literal_numeric)))) (function_body (block_statement)))
  (function (kw_function) (function_name (identifier)) (function_params) (function_body (block_statement
    (statement (declaration (variable (kw_let) (identifier))))
  )))
  (function (kw_function) (function_name (identifier)) (function_params (function_param (identifier) (ts_type_annotation (ts_number)))) (function_body (block_statement)))
  (function (kw_function) (function_name (identifier)) (function_params (function_param (object_binding (identifier)))) (function_body (block_statement)))
  (function (kw_function) (function_name (identifier)) (function_params) (ts_type_annotation (ts_number)) (function_body (block_statement)))
  (function (kw_function) (function_name (identifier)) (ts_generic (ts_user_type)) (function_params) (function_body (block_statement)))
  (function (kw_async) (kw_function) (function_name (identifier)) (function_params) (function_body (block_statement)))
)
