test/corpus/declarations/imports.txt
=======
Imports
=======

import default from 'module';
import * as target from 'module';
import { target } from 'module';
import { target as alias } from 'module';
import { target, two } from 'module';
import { target as alias, two } from 'module';
import { 'some string' as alias } from 'module';
import defailt, * as target, { one } from 'module';
import type { target } from 'module';
import { type target } from 'module';

---

(source_file
  (statement (declaration
    (import (kw_import) (import_clause (import_name (identifier))) (kw_from) (import_module_specifier (string)))
  ))
  (statement (declaration
    (import (kw_import) (import_clause (import_namespace) (kw_as) (import_name (identifier))) (kw_from) (import_module_specifier (string)))
  ))
  (statement (declaration
    (import (kw_import) (import_clause (import_name (identifier))) (kw_from) (import_module_specifier (string)))
  ))
  (statement (declaration
    (import (kw_import) (import_clause (identifier) (kw_as) (import_name (identifier))) (kw_from) (import_module_specifier (string)))
  ))
  (statement (declaration
    (import (kw_import) (import_clause (import_name (identifier)) (import_name (identifier))) (kw_from) (import_module_specifier (string)))
  ))
  (statement (declaration
    (import (kw_import) (import_clause (identifier) (kw_as) (import_name (identifier)) (import_name (identifier))) (kw_from) (import_module_specifier (string)))
  ))
  (statement (declaration
    (import (kw_import) (import_clause (string) (kw_as) (import_name (identifier))) (kw_from) (import_module_specifier (string)))
  ))
  (statement (declaration
    (import (kw_import) (import_clause
      (import_name (identifier))
      (import_namespace) (kw_as) (import_name (identifier))
      (import_name (identifier))
    )
    (kw_from) (import_module_specifier (string)))
  ))
  (statement (declaration
    (import (kw_import) (kw_type) (import_clause (import_name (identifier))) (kw_from) (import_module_specifier (string)))
  ))
  (statement (declaration
    (import (kw_import) (import_clause (kw_type) (import_name (identifier))) (kw_from) (import_module_specifier (string)))
  ))
)
