test/corpus/destructuring.txt
=============
Destructuring
=============

[a] = a;
[a, b] = a;
[a, , b] = a;
[a, ...rest] = a;
[a = a] = a;
[{ a }] = a;

({ a } = a);
({ a, b } = a);
({ a: a1 } = a);
({ a = a } = a);
({ ...rest } = a);
({ a: a1 = a } = a);

---

(source_file
  (statement (expression
    (assign (array_binding (identifier)) (expression (identifier)))
  ))
  (statement (expression
    (assign (array_binding (identifier) (identifier)) (expression (identifier)))
  ))
  (statement (expression
    (assign (array_binding (identifier) (identifier)) (expression (identifier)))
  ))
  (statement (expression
    (assign (array_binding (identifier) (identifier)) (expression (identifier)))
  ))
  (statement (expression
    (assign (array_binding (assign (identifier) (expression (identifier)))) (expression (identifier)))
  ))
  (statement (expression
    (assign (array_binding (object_binding (identifier))) (expression (identifier)))
  ))
  (statement (expression (parens_expr (expression
    (assign (object_binding (identifier)) (expression (identifier)))
  ))))
  (statement (expression (parens_expr (expression
    (assign (object_binding (identifier) (identifier)) (expression (identifier)))
  ))))
  (statement (expression (parens_expr (expression
    (assign (object_binding (bind_as (identifier) (identifier))) (expression (identifier)))
  ))))
  (statement (expression (parens_expr (expression
    (assign (object_binding (assign (identifier) (expression (identifier)))) (expression (identifier)))
  ))))
  (statement (expression (parens_expr (expression
    (assign (object_binding (identifier)) (expression (identifier)))
  ))))
  (statement (expression (parens_expr (expression
    (assign (object_binding (bind_as (identifier) (assign (identifier) (expression (identifier))))) (expression (identifier)))
  ))))
)
