test/corpus/expressions/call-expression.txt
===============
Call Expression
===============

a();
a(1);
a(1, a);
a.b();
a.b.c();
a().b;
a<Type>();

---

(source_file
  (statement (expression
    (call_expr (identifier) (call_expr_params))
  ))
  (statement (expression 
    (call_expr (identifier) (call_expr_params (expression (literal_numeric))))
  ))
  (statement (expression 
    (call_expr (identifier) (call_expr_params (expression (literal_numeric)) (expression (identifier))))
  ))
  (statement (expression 
    (call_expr (property_expr (identifier) (identifier)) (call_expr_params))
  ))
  (statement (expression 
    (call_expr (property_expr (identifier) (property_expr (identifier) (identifier))) (call_expr_params))
  ))
  (statement (expression 
    (property_expr (call_expr (identifier) (call_expr_params)) (identifier))
  ))
  (statement (expression 
    (call_expr (identifier) (ts_generic (ts_user_type)) (call_expr_params))
  ))
)
