test/corpus/expressions/primary.txt
===================
Primary Expressions
===================

a;
1;
"hi";
/a/;
true;
null;
this;
[];
{};
(a);
(function(){});
(async function(){});
(()=>{});
(()=>1);
a.b;
a?.b;

---

(source_file
  (statement (expression (identifier)))
  (statement (expression (literal_numeric)))
  (statement (expression (literal_string)))
  (statement (expression (literal_regex)))
  (statement (expression (literal_boolean (kw_true))))
  (statement (expression (literal_null)))
  (statement (expression (kw_this)))
  (statement (expression (literal_array)))
  (statement (expression (literal_object)))
  (statement (expression (parens_expr (expression (identifier)))))
  (statement (expression (parens_expr (expression (function_expr (kw_function) (function_params) (function_body (block_statement)))))))
  (statement (expression (parens_expr (expression (function_expr (kw_async) (kw_function) (function_params) (function_body (block_statement)))))))
  (statement (expression (parens_expr (expression (function_arrow_expr (function_params) (function_body (block_statement)))))))
  (statement (expression (parens_expr (expression (function_arrow_expr (function_params) (expression (literal_numeric)))))))
  (statement (expression (property_expr (identifier) (identifier))))
  (statement (expression (property_expr (identifier) (identifier))))
)
