test/corpus/jsx.txt
===
JSX
===

<Hello></Hello>;
<Hello/>;
<Hello foo="bar" />;
<Hello foo={"bar"}></Hello>;
<Hello>Some content</Hello>;
<Hello><World /></Hello>;

<Hello foo={a}/>;
<Hello foo={a.b}/>;
<Hello aria-label="yolo"/>;

---

(source_file
  (statement (expression (jsx_expr
    (jsx_start (jsx_name)) (jsx_end (jsx_name))
  )))
  (statement (expression (jsx_expr
    (jsx_self (jsx_name))
  )))
  (statement (expression (jsx_expr
    (jsx_self (jsx_name) (attribute_name) (attribute_value (literal_string)))
  )))
  (statement (expression (jsx_expr
    (jsx_start (jsx_name) (attribute_name) (attribute_value
      (expression (literal_string))
    ))
    (jsx_end (jsx_name))
  )))
  (statement (expression (jsx_expr
    (jsx_start (jsx_name))
      (text)
    (jsx_end (jsx_name))
  )))
  (statement (expression (jsx_expr
    (jsx_start (jsx_name))
      (jsx_self (jsx_name))
    (jsx_end (jsx_name))
  )))
  (statement (expression (jsx_expr
    (jsx_self (jsx_name) (attribute_name) (attribute_value
      (expression (identifier))
    ))
  )))
  (statement (expression (jsx_expr
    (jsx_self (jsx_name) (attribute_name) (attribute_value
      (expression (property_expr (identifier) (identifier)))
    ))
  )))
  (statement (expression (jsx_expr
    (jsx_self (jsx_name) (attribute_name) (attribute_value (literal_string)))
  )))
)
