test/corpus/operators/comparison.txt
==========
Comparison
==========

a == a;
a != a;

---

(source_file
  (statement (expression
    (equals (expression (identifier)) (expression (identifier)))
  ))
  (statement (expression
    (not_equals (expression (identifier)) (expression (identifier)))
  ))
)
