test/corpus/operators/logical.txt
=======
Logical
=======

a || a;
a && a;
!a;

---

(source_file
  (statement (expression
    (or (expression (identifier)) (expression (identifier)))
  ))
  (statement (expression
    (and (expression (identifier)) (expression (identifier)))
  ))
  (statement (expression
    (not (expression (identifier)))
  ))
)
