test/corpus/operators/ternary.txt
=======
Ternary
=======

a ? a : a;

---

(source_file
  (statement (expression
    (ternary (ternary_test (expression (identifier))) (ternary_consequent (expression (identifier))) (ternary_alternate (expression (identifier))))
  ))
)
