test/corpus/statements/if.txt
============
If Statement
============

if (true)
  a = a;

if (true) {
  a = a;
}

if (true) {
  a = a;
} else {
  a = a;
}

if (true) {
  a = a;
} else if (true) {
  a = a;
}

---

(source_file
  (statement (if
    (kw_if) (if_test (expression (literal_boolean (kw_true)))) (consequent
      (statement (expression (assign (identifier) (expression (identifier)))))
    )
  ))

  (statement (if
    (kw_if) (if_test (expression (literal_boolean (kw_true)))) (consequent (block_statement
      (statement (expression (assign (identifier) (expression (identifier)))))
    ))
  ))

  (statement (if
    (kw_if) (if_test (expression (literal_boolean (kw_true))))
    (consequent (block_statement
      (statement (expression (assign (identifier) (expression (identifier)))))
    ))
    (alternate (kw_else) (block_statement
      (statement (expression (assign (identifier) (expression (identifier)))))
    ))
  ))

  (statement (if
    (kw_if) (if_test (expression (literal_boolean (kw_true))))
    (consequent (block_statement
      (statement (expression (assign (identifier) (expression (identifier)))))
    ))
    (alternate (kw_else) (if (kw_if) (if_test (expression (literal_boolean (kw_true))))
    (consequent (block_statement
      (statement (expression (assign (identifier) (expression (identifier)))))
    ))))
  ))

)
