test/corpus/statements/return.txt
======
Return
======

function a () {
  return 1;
}

function a () {
  return (1);
}

---

(source_file
  (function (kw_function) (function_name (identifier)) (function_params) (function_body (block_statement
    (statement (return (kw_return) (expression (literal_numeric))))
  )))
  (function (kw_function) (function_name (identifier)) (function_params) (function_body (block_statement
    (statement (return (kw_return) (parens_expr (expression (literal_numeric)))))
  )))
)
