test/corpus/types/advanced.txt
==============
Advanced Types
==============

let a: number | string;
type A = number;
interface A { a: number; }
let a = 1 as number;
let a: Ab<number, number>;
let a: Ab['b'];
let a: (a: any) => void;
let a: Ab<keyof Type>;

---

(source_file
  (statement (declaration (variable
    (kw_let) (identifier) (ts_type_annotation (ts_union (ts_number) (ts_string)))
  )))
  (statement (declaration (ts_type_alias
    (kw_type) (identifier) (ts_number)
  )))
  (ts_interface
    (kw_interface) (identifier) (ts_object (ts_object_property (identifier)) (ts_type_annotation (ts_number)))
  )
  (statement (declaration (variable
    (kw_let) (identifier) (expression (ts_as (expression (literal_numeric)) (kw_as) (ts_number)))
  )))
  (statement (declaration (variable
    (kw_let) (identifier) (ts_type_annotation (ts_user_type (ts_generic (ts_number) (ts_number))))
  )))
  (statement (declaration (variable
    (kw_let) (identifier) (ts_type_annotation (ts_user_type (ts_index_access (ts_literal (literal_string)))))
  )))
  (statement (declaration (variable
    (kw_let)
    (identifier)
    (ts_type_annotation
      (ts_function (ts_function_params (ts_function_param (identifier) (ts_type_annotation (ts_any)))) (ts_function_return (ts_void)))
    )
  )))
  (statement (declaration (variable
    (kw_let) (identifier) (ts_type_annotation (ts_user_type (ts_generic (ts_keyof (ts_user_type)))))
  )))
)
