test/corpus/types/basic.txt
===========
Basic Types
===========

let a: any;
let a: null;
let a: unknown;
let a: undefined;
let a: boolean;
let a: number;
let a: bigint;
let a: string;
let a: "hello";
let a: string[];
let a: (string)[];
let a: [number, string];
let a: { a: number; };

---

(source_file
  (statement (declaration (variable
    (kw_let) (identifier) (ts_type_annotation (ts_any))
  )))
  (statement (declaration (variable
    (kw_let) (identifier) (ts_type_annotation (ts_null))
  )))
  (statement (declaration (variable
    (kw_let) (identifier) (ts_type_annotation (ts_unknown))
  )))
  (statement (declaration (variable
    (kw_let) (identifier) (ts_type_annotation (ts_undefined))
  )))
  (statement (declaration (variable
    (kw_let) (identifier) (ts_type_annotation (ts_boolean))
  )))
  (statement (declaration (variable
    (kw_let) (identifier) (ts_type_annotation (ts_number))
  )))
  (statement (declaration (variable
    (kw_let) (identifier) (ts_type_annotation (ts_bigint))
  )))
  (statement (declaration (variable
    (kw_let) (identifier) (ts_type_annotation (ts_string))
  )))
  (statement (declaration (variable
    (kw_let) (identifier) (ts_type_annotation (ts_literal (literal_string)))
  )))
  (statement (declaration (variable
    (kw_let) (identifier) (ts_type_annotation (ts_array (ts_string)))
  )))
  (statement (declaration (variable
    (kw_let) (identifier) (ts_type_annotation (ts_array (ts_string)))
  )))
  (statement (declaration (variable
    (kw_let) (identifier) (ts_type_annotation (ts_tuple (ts_number) (ts_string)))
  )))
  (statement (declaration (variable
    (kw_let) (identifier) (ts_type_annotation (ts_object (ts_object_property (identifier)) (ts_type_annotation (ts_number))))
  )))
)
